--- a/style.css
+++ b/style.css
@@ -115,3 +115,19 @@ nav ul li a {
 #backToTop:hover {
     background-color: #555;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
